# ChangeLog for Gentoo Linux System Intialization ("rc") scripts 
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL
# Written by Daniel Robbins (drobbins@gentoo.org)

* rc-scripts 1.4.3.4 (16 March 2003)

  16 March 2003; Martin Schlemmer <azarah@gentoo.org>:

    Add /etc/issue done by a Polish ascii-artists, v|rus with some slight
    modifications (purple and display hostname, etc).  Closes bug #16806.

    Add 'use hotplug' to /etc/init.d/net.eth0, to get cardbus hardware to
    work properly.  Closes bug #17348.

    Add update from Wout Mertens <wmertens@gentoo.org> to speedup shutdown
    of dhcp interfaces, closing bug #17378.  This modified /etc/init.d/net.eth0.

  11 March 2003; Martin Schlemmer <azarah@gentoo.org>:

    Fix usage of /usr/bin/cut in /sbin/functions.sh, thanks Brandon Low
    <lostlogic@gentoo.org>!

  10 March 2003; Martin Schlemmer <azarah@gentoo.org>:

    Add sysfs support for 2.5 kernels (mounted to /sys).  Updated /sbin/rc
    and /etc/init.d/halt.sh for this.

    Update /etc/fstab to correctly mount /proc with:
    
      mount -t proc none /proc

    Do the same for /dev/shm:

      mount -t tmpfs none /dev/shm

    Fix a typeo in /etc/init.d/checkroot that caused 'umount -a' to output
    noise if we exited a recovery console.

    Fix /etc/init.d/hostname using /usr/bin/cut, closing bug #17175, thanks
    to Bobby Bingham <uhmmmm@columbus.rr.com> for noticing this.

    Bring down default gateway before adding new one .. this fixes issues
    where eth0/whatever was brought up by kernel.  Changed /etc/init.d/net.eth0
    for this, closing bug #17164.  Thanks to nth <y.lesaint@free.fr> for the
    fix.

    Fix /etc/init.d/modules to call modprobe with -q .. this fix issues where
    it fails for module-init-tools if the module is already loaded.  This
    closes bug #17163, thanks to nth <y.lesaint@free.fr>.

* rc-scripts 1.4.3.3 (09 March 2003)

  09 March 2003; Martin Schlemmer <azarah@gentoo.org>:
