@@ -2,6 +2,10 @@
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL
 # Written by Daniel Robbins (drobbins@gentoo.org)
 
+  16 March 2003; Martin Schlemmer <azarah@gentoo.org>:
+
+    Update sbin/rc-envupdate.sh.bash for bug #17549.
+
 * rc-scripts 1.4.3.4 (16 March 2003)
 
   16 March 2003; Martin Schlemmer <azarah@gentoo.org>:
